Issue 1633 (#515)
* [issue-1633]

Signed-off-by: JanardhanBS-SyncByte <janardhan@syncbyte.in>

* [issue-1633]

Signed-off-by: JanardhanBS-SyncByte <janardhan@syncbyte.in>

* [issue-1633] added swagger for mock mds

Signed-off-by: JanardhanBS-SyncByte <janardhan@syncbyte.in>

* [issue-1633] licence changes

Signed-off-by: JanardhanBS-SyncByte <janardhan@syncbyte.in>

* [issue-1633] mock mv kattu maven-build

Signed-off-by: JanardhanBS-SyncByte <janardhan@syncbyte.in>

---------

Signed-off-by: JanardhanBS-SyncByte <janardhan@syncbyte.in>